add final tests for usermanager, encryption and virtualFolders